DATE       AUTHOR       CHANGE
---------- -----------  -------------------------------------------------------
2002-10-31 nonchocoboy  Added a cache for textures loaded onto the video card.
2002-10-30 nonchocoboy  Updated control to a chase camera with mouse-look.
2002-10-29 temyrr       Changed resolution to 1024 x 768
2002-10-28 nonchocoboy  Added EntityFactory for the creation of new Entity
                        types.
                        NEW VERSION: 0.3.0
2002-10-23 browner      Made Midworld use loom 0.0.4.
2002-10-19 daren        Added in a file parser for input bindings.
                        Midworld now can use InputSymbol for input bindings.
2002-10-09 browner      Made Midworld use loom for the ai system
                        NEW VERSION 0.2.4
2002-10-08 nonchocoboy  Added a loading state for filling up the resource
                        caches.
2002-10-08 nonchocoboy  Added cache preloading abilities to the model manager.
2002-10-08 nonchocoboy  Collision detection is now done using the bounds of the
                        models in the scene graph. OpenSGSceneViewer now
                        implements SpatialIndex.
                        NEW VERSION: 0.2.3
2002-10-07 aegis        Level loading.
2002-10-01 nonchocoboy  The player is now an entity in full.
2002-10-01 nonchocoboy  RigidBody now aggregates its state so that it keeps
                        track of its state for the current frame as well as the
                        next frame.
2002-10-01 aegis        no more NullWeapon!!
2002-10-01 nonchocoboy  Fixed OpenSG rendering woes. Everything now has the
                        right color and texture.
                        NEW VERSION: 0.2.2
2002-09-30 aegis        bullet casings with random rotations
                        story state
                        bullet casings with different models than bullets
                        added Lou's music
                        draw a background image in the story state