@@ -1,5 +1,6 @@
 DATE       AUTHOR       CHANGE
 ---------- -----------  -------------------------------------------------------
+2002-10-31 aegis        Added new collision detection architecture.
 2002-10-31 nonchocoboy  Added a cache for textures loaded onto the video card.
 2002-10-30 nonchocoboy  Updated control to a chase camera with mouse-look.
 2002-10-29 temyrr       Changed resolution to 1024 x 768
